--- a/style.css
+++ b/style.css
@@ -1,47 +1,39 @@
+/*--------------------------------------------------*/
+
+/*font initialize*/
 @font-face {
     font-family: 'adam'; /*a name to be used later*/
     src: url(font/Adam.otf); 
 }
 
+/*--------------------------------------------------*/
+
+/*Global Styles*/
 body{
     font-weight: 500;
-    color: rgb(85, 62, 107);
+    color: rgb(165, 165, 165);
+    background-color: rgb(10, 0, 14);
 }
 
 a{ 
     font-weight: 900;
     font-size: larger;
-    color:#9a65fc;
     font-family: adam;
-    text-decoration: none;
 }
 
 a:hover{
     color:#9a65fc93;
     transition: ease-in-out;
-    transition-duration: 300ms;
-    text-decoration: none;
-}
-
-#cv{
-    text-decoration: none;
-    padding:0;
-    color:#9a65fc;
-    font-family:adam;
-    font-size: 0.8em;
-    font-weight: bolder;
-
-}
-
-body{
-    background-color: rgb(10, 0, 14);
+    transition-duration: 100ms;
 }
 
 h1{
     color: rgb(89, 6, 167);
 }
 
+/*--------------------------------------------------*/
 
+/*Background*/
 .bg{
     background-position: center;
     background-repeat: no-repeat;
@@ -49,3 +41,25 @@ h1{
     height: 100%; 
     background-image: url(img/banner.jpg);
 }
+
+/*--------------------------------------------------*/
+
+/*Navbar Links*/
+#name{
+    color:#9a65fc;
+    
+}
+
+#name:hover{
+    color:#9a65fc93;
+    transition: ease-in-out;
+    transition-duration: 100ms;
+}
+
+/*--------------------------------------------------*/
+
+
+
+
+
+
