--- a/style.css
+++ b/style.css
@@ -60,6 +60,28 @@ h1{
 
 
 
+/*--------------------------------------------------*/
+/*--------------------------------------------------*/
+/*setup page*/
+/*--------------------------------------------------*/
+/*--------------------------------------------------*/
 
+/*Header*/
+.jumbotron {
+    background-image: url("/img/setup/IMG_3566.jpg");
+    background-size: cover;
+    background-position:center;
+    
+  }
 
+  
+.jumbotron h1{
+    color: rgb(182, 144, 218);
+}
 
+/*Card images*/
+.card-img-top {
+    width: 100%;
+    height: 20vw;
+    object-fit: contain;
+}
