smaller pics, new blog entry

--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@ h1{
     color: rgb(89, 6, 167);
 }
 
+hr{
+  border-color: #9a65fc93
+}
+
 /*--------------------------------------------------*/
 
 /*Background*/
