--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
     background-color: rgb(10, 0, 14);
 }
 
-a{ 
+nav a{ 
     font-weight: 900;
     font-size: larger;
     font-family: adam;
