add blog banner

--- a/style.css
+++ b/style.css
@@ -84,3 +84,22 @@ hr{
 }
 
 
+
+/*--------------------------------------------------*/
+/*--------------------------------------------------*/
+/*Blog page*/
+/*--------------------------------------------------*/
+/*--------------------------------------------------*/
+
+/*Header*/
+#blogheader{
+    background-image: url("/img/blog/banner/IMG_1650.jpg");
+    background-size: cover;
+    background-position:center;
+    
+  }
+
+  
+.jumbotron h1{
+    color: rgb(182, 144, 218);
+}
