--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 /*font initialize*/
 @font-face {
     font-family: 'adam'; /*a name to be used later*/
-    src: url(font/Adam.otf); 
+    src: url(/font/Adam.otf); 
 }
 
 /*--------------------------------------------------*/
@@ -43,7 +43,7 @@ hr{
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%; 
-    background-image: url(img/banner.jpg);
+    background-image: url("/img/banner.jpg");
 }
 
 /*--------------------------------------------------*/
