--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,28 @@
 
 /*--------------------------------------------------*/
 
+/*Custom Scroll Bar*/
+
+
+ ::-webkit-scrollbar-track{
+     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+     background-color: #bbbbbb;
+ }
+ 
+::-webkit-scrollbar{
+     width: 2px;
+     background-color: #F5F5F5;
+     border-radius: 10px;
+ }
+ 
+ ::-webkit-scrollbar-thumb{
+     background-color: rgb(89, 6, 167);
+     border-radius: 10px;
+ }
+
+ /*-------------------------------------------------*/
+ 
+
 /*Global Styles*/
 body{
     font-weight: 500;
