--- a/css/hiddencontent.css
+++ b/css/hiddencontent.css
@@ -71,3 +71,12 @@ z-index:-4;
 }
 
         
+
+#hidden-content div.expandTheFinalYear{
+display:none;
+margin-top:0px;
+padding: 10px 20px 20px 20px;
+z-index:-4;
+}
+
+        
