few changes - chair updated

--- a/css/style.css
+++ b/css/style.css
@@ -125,3 +125,22 @@ hr{
 .jumbotron h1{
     color: rgb(182, 144, 218);
 }
+
+
+/*--------------------------------------------------*/
+/*--------------------------------------------------*/
+/*Gallery page*/
+/*--------------------------------------------------*/
+/*--------------------------------------------------*/
+/*Header*/
+#galleryheader{
+    background-image: url("/img/gallery/banner2.JPG");
+    background-size: cover;
+    background-position:center;
+    
+  }
+
+  
+.jumbotron h1{
+    color: rgb(182, 144, 218);
+}
