--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 /*font initialize*/
 @font-face {
     font-family: 'adam'; /*a name to be used later*/
-    src: url(/font/Adam.otf); 
+    src: url(font/Adam.otf); 
 }
 
 /*--------------------------------------------------*/
