--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ hr{
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%; 
-    background-image: url("img/banner.jpg");
+    background-image: url("/img/banner.jpg");
 }
 
 /*--------------------------------------------------*/
