new blog post :)

--- a/css/hiddencontent.css
+++ b/css/hiddencontent.css
@@ -97,3 +97,12 @@ z-index:-4;
 }
 
         
+
+#hidden-content div.expandGraduationandFirstMonthasSoftwareEngineer{
+display:none;
+margin-top:0px;
+padding: 10px 20px 20px 20px;
+z-index:-4;
+}
+
+        
